--- a/pages/index.html
+++ b/pages/index.html
@@ -19,10 +19,11 @@
 
 <body class="body__index">
     <div class="cursor"></div>
-    <main class="main_index">
-        <header>
-
-            <nav class="barra__menu">
+    <main>
+        <video muted autoplay loop src="../assets/img/back.mp4"></video>
+        <section class="conte__menu">
+            <!-- MENU -->
+            <header class="header__index" id="barranav">
                 <div class="cont__logo__nav">
                     <a href="./index.html">
                         <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
@@ -31,71 +32,61 @@
                     </a>
                 </div>
                 <div class="icono-menu">
-                    <img src="../assets/img/menu1.svg" id="icono-menu">
+                    <img src="../assets/img/menub.svg" id="icono-menu">
                 </div>
-            </nav>
-
-            <div class="cont-menu active" id="menu">
-                <div class="cont__logo__menu"><img class="logo__menu" src="../assets/img/logo2.png" alt="logo_menu">
+            </header>
+            <!-- MENU ACTIVE -->
+            <div class="cont-menu-nuevo active" id="menu">
+                <div class="cont__logo__menu">
                 </div>
                 <ul>
-                    <div>
-                        <p>Menu</p>
-                        <li style="margin-top: 1em;"><a href="./index.html"> Inicio </a></li>
-                        <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;"
-                                href="inicio.html"> Acerca de mi </a></li>
+                    <div class="lista_social">
+                        <p>Social</p>
+                        <li><a href=""> Gmail </a></li>
+                        <li><a href=""> Behance </a></li>
+                        <li><a href=""> LinkedIn </a></li>
+                        <li><a href=""> Facebook </a></li>
+                        <li><a href=""> Instagram </a></li>
                     </div>
-                    <div>
-                        <p>Mis servicios</p>
-                        <li style="margin-top: 1em;"><a href="p_ux_ui.html"> Diseñador ux-ui </a> </li>
-                        <li><a href="p_ux_research.html"> Ux Research </a> </li>
-                        <li><a href="p_ux_writing.html"> Ux Writing </a> </li>
-                        <li><a href="p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
+                    <div class="lista_menu">
+                        <p>Menu</p>
+                        <li><a href="p_ux_ui.html"> Acerca de mi </a> </li>
+                        <li><a style="font-weight: 600;" href="p_ux_ui.html"> Home </a> </li>
+                        <li><a href="p_ux_ui.html"> UX - UI </a> </li>
+                        <li><a href="p_ux_research.html"> UX - Research </a> </li>
+                        <li><a href="p_ux_writing.html"> UX - Writing </a> </li>
+                        <li><a href="p_ux_developer.html"> Desarrollador </a> </li>
                     </div>
                 </ul>
-                <p> Mis redes sociales</p>
-                <div class="redes__menu">
-                    <a href="https://www.facebook.com/yaksin.vasques.5/" target="_blank"><img
-                            src="../assets/img/redfacebook.png" alt="logofacebook"></a>
-                    <a href="https://www.linkedin.com/in/jakhsin-sains-vasquez-pacheco-40a25211a/" target="_blank"><img
-                            src="../assets/img/redlinkedin.png" alt="logolinkedin"></a>
-                    <a href="https://www.instagram.com/yakhsin/" target="_blank"><img
-                            src="../assets/img/redinstagram.png" alt="logoinstagram"></a>
-                </div>
-            </div>
+                <div class="poner_contacto">
+                    <p> Ponerse en contacto</p>
+                    <p class="correo_contacto">Yaksinvasquez@gmail.com</p>
 
-        </header>
-        <!-- inicio home -->
-        <section class="index__home">
-            <div class="estrellasisquierda"> <img src="../assets\img\estrellasisquierda.svg" alt=""></div>
-            <div class="estrellasderecha"> <img src="../assets\img\estrellasderecha.svg" alt=""></div>
-            <h1 class="home__titulo">
-                <img class="imgflecha" src="../assets\img\imgflecha.svg" alt="imgflecha"> Diseño & desarrollo tus
-                productos
-                <img class="miniperfil" src="../assets\img\miniperfil.svg" alt="miniperfil">
-            </h1>
-            <p class="home__subtitulo">
-                Te doy la bienvenida a mi portafolio me llamo Jaksin sains, soy de la ciudad de
-                Barranquilla-Colombia y tengo 27 años, Soy diseñador UX-UI desde hace 3 años especialista en UX Research
-                - Writing, desarrollador web y
-                móvil.
-            </p>
-            <div class="float">
-                <a href="./home.html">
-                    <img class="botonfloat " src="../assets/img/botonfloat.svg" alt="botonflotante">
-                    <img class="backfloat" src="../assets/img/blackfloat.svg" alt="contendorboton"></a>
-            </div>
-            <div class="home__contenedorcintas">
-                <div class="contcinta1">
-                    <div class="cintahome1">
-                    </div>
-                </div>
-                <div class="contcinta2">
-                    <div class="cintahome2">
-                    </div>
                 </div>
             </div>
+            <section class="titulo__index">
+                <div> <img src="../assets/img/Star5.svg" alt=""> <p>Diseñador Ux - Ui , Artista visual , Diseñador de interacciones positivas y motion designer</p></div>
+                <div><h1>Diseño & Desarrollo Tus Productos <img src="../assets/img/miniperfil.svg" alt=""></h1></div>
+            </section>
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!-- javascripts -->
         <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js">
