actualizacion de inicio

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,13 +20,21 @@
 <body class="body__index">
     <div class="cursor"></div>
     <main>
-        <video muted autoplay loop src="../assets/img/back.mp4"></video>
+        <div class="boton_portafolio">
+            <img src="../assets/img/fondoboton.svg" alt="boton">
+            <div class="boton_portafolio_contenedor">
+                <img class="botonfloat" src="../assets/img/botonfloat.svg" alt="">
+                <img class="blackfloat" src="../assets/img/blackfloat.svg" alt="">
+            </div>
+        </div>
+        <div class="capa_blur"> </div>
+        <video muted autoplay  loop src="../assets/img/back.mp4"></video>
         <section class="conte__menu">
             <!-- MENU -->
             <header class="header__index" id="barranav">
                 <div class="cont__logo__nav">
                     <a href="./index.html">
-                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
+                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="10" style="width:100px;"
                             autoplay>
                         </lottie-player>
                     </a>
@@ -64,30 +72,23 @@
 
                 </div>
             </div>
-            <section class="titulo__index">
-                <div> <img src="../assets/img/Star5.svg" alt=""> <p>Diseñador Ux - Ui , Artista visual , Diseñador de interacciones positivas y motion designer</p></div>
-                <div><h1>Diseño & Desarrollo Tus Productos <img src="../assets/img/miniperfil.svg" alt=""></h1></div>
-            </section>
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <section class="titulo__index">
+            <div class="cont_titulo_uno">
+                <div> <img src="../assets/img/Star5.svg" alt="">
+                    <p>Diseñador Ux - Ui , Artista visual , Diseñador de interacciones positivas y motion designer
+                    </p>
+                </div>
+                <div>
+                    <h1>Diseño & Desarrollo Tus Productos <img src="../assets/img/miniperfil.svg" alt=""></h1>
+                </div>
+            </div>
+            <div class="cont_titulo_dos">
+                <p>Te doy la bienvenida a mi portafolio me llamo Jaksin sains vasquez, soy de la ciudad de
+                    Barranquilla-Colombia y tengo 27 años. Soy diseñador UX-UI, UX Research - Wrinting,
+                    desarrollador web y móvil, tengo 3 años de experiencia en el área del diseño de interfaces.</p>
+            </div>
+        </section>
         <!-- javascripts -->
         <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js">
         </script>
