add responsive y chips en inicio

--- a/pages/index.html
+++ b/pages/index.html
@@ -75,12 +75,19 @@
         </section>
         <section class="titulo__index">
             <div class="cont_titulo_uno">
-                <div> <img src="../assets/img/Star5.svg" alt="">
+                <div class="sub_titulo"> <img src="../assets/img/Star5.svg" alt="">
                     <p>Diseñador Ux - Ui , Artista visual , Diseñador de interacciones positivas y motion designer
                     </p>
                 </div>
-                <div>
-                    <h1>Diseño & Desarrollo Tus Productos <img src="../assets/img/miniperfil.svg" alt=""></h1>
+                <div class="titulo">
+                    <h1>Diseño & Desarrollo <img src="../assets/img/miniperfil.svg" alt=""> Tus Productos.</h1>
+                </div>
+                <div class="contens_chips">
+                    <div class="chips"><p> Diseñador ux - ui</p></div>
+                    <div class="chips"><p> Ux - research</p></div>
+                    <div class="chips"><p> Ux - Writing</p></div>
+                    <div class="chips"><p> Frontend</p></div>
+                    <div class="chips"><p> Developer movil</p></div>
                 </div>
             </div>
             <div class="cont_titulo_dos">
