--- a/pages/index.html
+++ b/pages/index.html
@@ -30,48 +30,24 @@
         <div class="capa_blur"> </div>
         <video muted autoplay  loop src="../assets/img/back.mp4"></video>
         <section class="conte__menu">
-            <!-- MENU -->
-            <header class="header__index" id="barranav">
+            <header class="header__index">
                 <div class="cont__logo__nav">
                     <a href="./index.html">
-                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="10" style="width:100px;"
+                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
                             autoplay>
                         </lottie-player>
                     </a>
                 </div>
                 <div class="icono-menu">
-                    <img src="../assets/img/menub.svg" id="icono-menu">
+                    <div class="bars__menu">
+                        <span class="line1__bars-menu"></span>
+                        <span class="line2__bars-menu"></span>
+                        <span class="line3__bars-menu"></span>
+                    </div>
                 </div>
             </header>
-            <!-- MENU ACTIVE -->
-            <div class="cont-menu-nuevo active" id="menu">
-                <div class="cont__logo__menu">
-                </div>
-                <ul>
-                    <div class="lista_social">
-                        <p>Social</p>
-                        <li><a href=""> Gmail </a></li>
-                        <li><a href=""> Behance </a></li>
-                        <li><a href=""> LinkedIn </a></li>
-                        <li><a href=""> Facebook </a></li>
-                        <li><a href=""> Instagram </a></li>
-                    </div>
-                    <div class="lista_menu">
-                        <p>Menu</p>
-                        <li><a href="p_ux_ui.html"> Acerca de mi </a> </li>
-                        <li><a style="font-weight: 600;" href="p_ux_ui.html"> Home </a> </li>
-                        <li><a href="p_ux_ui.html"> UX - UI </a> </li>
-                        <li><a href="p_ux_research.html"> UX - Research </a> </li>
-                        <li><a href="p_ux_writing.html"> UX - Writing </a> </li>
-                        <li><a href="p_ux_developer.html"> Desarrollador </a> </li>
-                    </div>
-                </ul>
-                <div class="poner_contacto">
-                    <p> Ponerse en contacto</p>
-                    <p class="correo_contacto">Yaksinvasquez@gmail.com</p>
-
-                </div>
-            </div>
+            
+            
         </section>
         <section class="titulo__index">
             <div class="cont_titulo_uno">
