--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../style/sass.css">
     <title>Portafolio</title>
 </head>
-<body>
+<body style="height: 100vh; width: 100vw; display: flex; align-items: center;
+justify-content: center;">
     <section class="logoindex">
         <lottie-player id="logoindex" src="../assets/img/logoindex.json" speed="1" style="width:200px;"
         loop autoplay>
