preload video fonto

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="preload" href="../assets/img/back.mp4" as="video">
+    <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <META HTTP-EQUIV="REFRESH" CONTENT="12;URL=./pages/index.html">
     <link rel="stylesheet" href="../style/sass.css">
