--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preload" href="../assets/img/back.mp4" as="video">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -14,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
 
-    <title>Dsain</title>
+    <title>Portafolio Yakhsin sains</title>
 </head>
 
 <body class="body__index">
