add nuevo loading

--- a/index.html
+++ b/index.html
@@ -1,17 +1,378 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <link rel="preload" href="../assets/img/back.mp4" as="video">
     <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META HTTP-EQUIV="REFRESH" CONTENT="12;URL=./pages/index.html">
+    <META HTTP-EQUIV="REFRESH" CONTENT="22;URL=./pages/index.html">
     <link rel="stylesheet" href="../style/sass.css">
     <title>Portafolio</title>
 </head>
+
 <body style="height: 100vh; width: 100vw; display: flex; align-items: center;
 justify-content: center;">
-    <section class="logoindex">
+    <div class="slider_uno">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="slider_dos">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -2; height: 90vw;" class="slider_dos">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -3; height: 90vh;margin-top: 10vh;padding-bottom: 10vh;" class="slider_uno">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -4; height: 80vw;" class="slider_dos">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -5; height: 80vh;margin-top: 20vh;padding-bottom: 20vh;" class="slider_uno">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -6; height: 70vw;" class="slider_dos">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -7; height: 70vh;margin-top: 30vh;padding-bottom: 30vh;" class="slider_uno">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="z-index: -8; height: 60vw;" class="slider_dos">
+        <div class="slide-track">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+        <div class="slide-track-contra">
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+            <div class="slide">
+                <p>CARGANDO. PORTAFOLIO. </p>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    <section style="transform: rotate(0deg);" class="logoindex">
         <lottie-player id="logoindex" src="../assets/img/logoindex.json" speed="1" style="width:200px;"
         loop autoplay>
         </lottie-player>
@@ -19,16 +380,17 @@ justify-content: center;">
 
 </body>
 
-        <!-- javascripts -->
-        <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js">
-        </script>
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-            </script>
-    <script src="../js/script.js"></script>
-</html> 
+<!-- javascripts -->
+<script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js">
+</script>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+<script src="../js/script.js"></script>
+
+</html>
