--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -15,142 +15,11 @@
     <script src="js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
- 
     <title>Proyectos Web-Movil</title>
 </head>
 
-<body data-barba="wrapper">
-    <div class="loader">
-        <div class="page-transition"></div>
-        <div class="pages-transition"></div>
-    </div>
-    <div class="cursor"></div>
-    <main class="main_plantilla" data-barba="container" data-barba-namespace="p_ux_ui">
-        <div class="float__wapp">
-            <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-                target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
-                data-aos-duration="500">
-                <img class="botonfloat__wapp" src="../assets/img/float.svg" alt="">
-                <img class="backfloat__wapp" src="../assets/img/backfloat.svg" alt=""></a>
-        </div>
-        <header>
-            <nav class="barra__menu">
-                <div class="cont__logo__nav">
-                    <a href="/pages/index.html">
-                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
-                            autoplay>
-                        </lottie-player>
-                    </a>
-                </div>
-                <div class="icono-menu">
-                    <img src="../assets/img/menu1.svg" id="icono-menu">
-                </div>
-            </nav>
-            <div class="cont-menu active" id="menu">
-                <div class="cont__logo__menu"><img class="logo__menu" src="../assets/img/logo2.png" alt="logo_menu"></div>
-                <ul>
-                    <div>
-                    <p>Menu</p>
-                    <li style="margin-top: 1em;"><a href="./index.html"> Inicio </a></li>
-                    <li><a  href="inicio.html"> Acerca de mi </a></li>
-                    </div>
-                    <div>
-                    <p>Mis servicios</p>
-                    <li style="margin-top: 1em;"><a href="p_ux_ui.html"> Diseñador ux-ui </a> </li>
-                    <li><a href="p_ux_research.html"> Ux Research </a> </li>
-                    <li><a href="p_ux_writing.html"> Ux Writing </a> </li>
-                    <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;"  href="p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
-                    </div>
-                </ul>
-                <p> Mis redes sociales</p>
-                    <div  class="redes__menu">
-                        <a href="https://www.facebook.com/yaksin.vasques.5/" target="_blank"><img
-                                src="../assets/img/redfacebook.png" alt="logofacebook"></a>
-                        <a href="https://www.linkedin.com/in/jakhsin-sains-vasquez-pacheco-40a25211a/" target="_blank"><img
-                                src="../assets/img/redlinkedin.png" alt="logolinkedin"></a>
-                        <a href="https://www.instagram.com/yakhsin/" target="_blank"><img 
-                                src="../assets/img/redinstagram.png"
-                                alt="logoinstagram"></a>
-                    </div>
-            </div>
-        </header>
-
-        <section class="cont__info__portafoliouxui">
-            <div class="titulo_plantilla">
-                <h2 class="titulo">
-                    Portafolio
-                </h2>
-                <p>Desarrollador web-móvil</p>
-            </div>
-            <div class="herramientas_plantilla">
-                <h2 class="titulo">
-                    Herramientas
-                </h2>
-                <div class="img_herramientas">
-                    <img src="../assets/img/html_5.png" alt="logofigma">
-                    <img src="../assets/img/css_3.png" alt="logofigma">
-                    <img src="../assets/img/js.png" alt="logofigma">
-                    <img src="../assets/img/python.png" alt="logofigma">
-                    <img src="../assets/img/git.png" alt="logofigma">
-                </div>
-            </div>
-            <div class="contador__proyectos">
-                <h2 class="titulo">
-                    Proyectos
-                </h2>
-                <p>1</p>
-            </div>
-            <div class="contador__lvl">
-                <h2 class="titulo">
-                    Nivel
-                </h2>
-                <p>Junior</p>
-            </div>
-            <div class="contador__exp">
-                <h2 class="titulo">
-                    Experiencia
-                </h2>
-                <p>0 Años</p>
-            </div>
-            <div><a href="#">
-                    <img src="../assets/img/logocertificados.svg" alt="logocertificados">
-                </a>
-            </div>
-        </section>
-        <section class="cont__proyectos">
-            <!-- PROYECTOS -->
-            <article class="proyectos">
-                <img class="proyectos__img" src="../assets/img/developer.png" alt="image developer 1">
-                
-                <div class="cont__titulo__proyectos">
-                    <div>
-                        <h2>
-                            Justune
-                        </h2>
-                    </div>
-                    <div class="contadores">
-                        <div class="contador__group">
-                            <img src="../assets/img/usergroup.svg" alt="usergroup">
-                            <p>
-                                3
-                            </p>
-                        </div>
-                        <div class="fecha__proyecto">
-                            <img src="../assets/img/calendar.svg" alt="calendario">
-                            <p>
-                                1/02/23
-                            </p>
-                        </div>
-                    </div>
-                    <div class="proyecto__boton">
-                        <div class="home__boton cursor-scale small">
-                            <a href="#">Ver proyecto
-                                <img src="../assets/img/flechaboton.svg" alt="flecha"></a>
-                        </div>
-                    </div>
-                </div>
-            </article>
-    </main>
+<body>
+    
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
