--- a/pages/index.html
+++ b/pages/index.html
@@ -55,23 +55,19 @@
                     </p>
                     <ul class="lista_uno">
                         <div class="cont_opcion_lista">
-                            <a style="font-weight: 400;">Acerca De Mi<p>(01)</p></a>
+                            <a style="font-weight: 400;">Home<p>(01)</p></a>
                         </div>
                         <div class="cont_opcion_lista"><img class="flachamenu" src="../assets/img/flachamenu.svg"
                                 alt="">
-                            <a translate="no" href="">Home<p>(02)</p></a>
+                            <a translate="no" href="">UX - UI<p>(02)</p></a>
                         </div>
                         <div class="cont_opcion_lista"><img class="flachamenu" src="../assets/img/flachamenu.svg"
                                 alt="">
-                            <a translate="no" href="">UX - UI<p>(03)</p></a>
+                            <a translate="no" href="">UX - Research<p>(03)</p></a>
                         </div>
                         <div class="cont_opcion_lista"><img class="flachamenu" src="../assets/img/flachamenu.svg"
                                 alt="">
-                            <a translate="no" href="">UX - Research<p>(04)</p></a>
-                        </div>
-                        <div class="cont_opcion_lista"><img class="flachamenu" src="../assets/img/flachamenu.svg"
-                                alt="">
-                            <a translate="no" href="">UX - Wrinting<p>(05)</p></a>
+                            <a translate="no" href="">UX - Wrinting<p>(04)</p></a>
                         </div>
                         <div class="cont_opcion_lista"><img class="flachamenu" src="../assets/img/flachamenu.svg"
                                 alt="">
@@ -108,7 +104,7 @@
                     </p>
                 </div>
                 <div class="titulo">
-                    <h1>Diseño & Desarrollo <img src="../assets/img/miniperfil.svg" alt=""> Tus Productos.</h1>
+                    <h1>Hola! soy el diseñador <img src="../assets/img/miniperfil.svg" alt=""> Que Necesitas.</h1>
                 </div>
                 <div class="contens_chips">
                     <div class="chips">
@@ -132,6 +128,9 @@
                 <p>Te doy la bienvenida a mi portafolio me llamo Jaksin sains vasquez, soy de la ciudad de
                     Barranquilla-Colombia y tengo 27 años. Soy diseñador UX-UI, UX Research - Wrinting,
                     desarrollador web y móvil, tengo 3 años de experiencia en el área del diseño de interfaces.</p>
+                    <div class="cont_falso_boton">
+
+                    </div>
             </div>
         </section>
         <!-- javascripts -->
