actualizacion velocidad cinta

--- a/pages/index.html
+++ b/pages/index.html
@@ -136,6 +136,11 @@
                     <div class="slide">
                         <p>DESARROLLO CREATIVO. </p>
                     </div>
+                    <video class="video_uno" autoplay loop src="../assets/img/videodos.mp4"></video>
+                    
+                    <div class="slide">
+                        <p>HAGAMOS REALIDAD TUS IDEAS.</p>
+                    </div>
                 </div>
             </div>
         </section>
